nav-bar: Reduce width of logo to prevent text wrapping
The width of the logo was increased to 100%, this resulted in the nav items wrapping onto a new line.

--- a/src/components/04-modules/nav-bar/nav-bar.scss
+++ b/src/components/04-modules/nav-bar/nav-bar.scss
@@ -19,7 +19,6 @@
     display: block;
     margin: 2px; // margin on this helps keep the focus outline within the viewport
     margin-bottom: 22px;
-    width: 100%;
 
     img {
       width: 190px;
